--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="./Develop/assets/css/style.css" />
+    <header>permissions-policy: interest-cohort=()</header>;
   </head>
   <body>
     <div class="wrapper">
