--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Password Generator</title>
     <link rel="stylesheet" href="./Develop/assets/css/style.css" />
     <header>permissions-policy: interest-cohort=()</header>;
+    <link rel="shortcut icon" href="#">
   </head>
   <body>
     <div class="wrapper">
