--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head permissions-policy: interest-cohort=()>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <header permissions-policy: interest-cohort=()>
+      <header>
         <h1>Password Generator</h1>
       </header>
       <div class="card">
